--- a/electronic.html
+++ b/electronic.html
@@ -46,11 +46,7 @@
                   <div class="col-sm-12">
                      <div class="custom_menu">
                         <ul>
-                           <li><a href="#">Best Sellers</a></li>
-                           <li><a href="#">Gift Ideas</a></li>
-                           <li><a href="#">New Releases</a></li>
-                           <li><a href="#">Today's Deals</a></li>
-                           <li><a href="#">Customer Service</a></li>
+                           <li><a href="https://wa.me/c/256759134270">Customer Service</a></li>
                         </ul>
                      </div>
                   </div>
