--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                      <div class="custom_menu">
                         <ul>
                            
-                           <li><a href="https://wa.me/c/256759134270">Customer Service</a></li>
+                           <li><a href="">Customer Service</a></li>
                         </ul>
                      </div>
                   </div>
@@ -106,8 +106,8 @@
                         </a>
                         <div class="dropdown-menu ">
                            <a href="#" class="dropdown-item">
-                           <img src="images/flag-france.png" class="mr-2" alt="flag">
-                           French
+                           <img src="" class="mr-2" alt="flag">
+                           luganda
                            </a>
                         </div>
                      </div>
