--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                      <div class="carousel-item active">
                         <div class="row">
                            <div class="col-sm-12">
-                              <h1 class="banner_taital">Get Start <br>Your favriot shoping</h1>
+                              <h1 class="banner_taital">Get Start <br>NAKASERO FRESH FRUITSAND VEGETABLES</h1>
                               <div class="buynow_bt"><a href="https://wa.me/c/256759134270">Buy Now</a></div>
                            </div>
                         </div>
@@ -144,7 +144,7 @@
                      <div class="carousel-item">
                         <div class="row">
                            <div class="col-sm-12">
-                              <h1 class="banner_taital">Get Your favoorite Fruits <br>Your favriot shoping</h1>
+                              <h1 class="banner_taital">NAKASERO FRESH FRUITS AND VEGETABLES</h1>
                               <div class="buynow_bt"><a href="https://wa.me/c/256759134270">Buy Now</a></div>
                            </div>
                         </div>
@@ -152,8 +152,8 @@
                      <div class="carousel-item">
                         <div class="row">
                            <div class="col-sm-12">
-                              <h1 class="banner_taital">Get Start <br>Your favriot shoping</h1>
-                              <div class="buynow_bt"><a href="#">Buy Now</a></div>
+                              <h1 class="banner_taital">NAKASERO MARKET</h1>
+                              <div class="buynow_bt"><a href="https://wa.me/c/256759134270">Buy Now</a></div>
                            </div>
                         </div>
                      </div>
@@ -181,7 +181,7 @@
                         <div class="row">
                            <div class="col-lg-4 col-sm-4">
                               <div class="box_main">
-                                 <h4 class="shirt_text">Cerials</h4>
+                                 <h4 class="shirt_text">Passion fruit</h4>
                                  <p class="price_text">Price  <span style="color: #262626;">1kg 10,000shs</span></p>
                                  <div class="tshirt_img"><img src="1.1.png"></div>
                                  <div class="btn_main">
@@ -192,7 +192,7 @@
                            </div>
                            <div class="col-lg-4 col-sm-4">
                               <div class="box_main">
-                                 <h4 class="shirt_text">Mangoes</h4>
+                                 <h4 class="shirt_text">Tangerine</h4>
                                  <p class="price_text">Price  <span style="color: #262626;">1kg 6000shs</span></p>
                                  <div class="tshirt_img"><img src="1.9.jpg"></div>
                                  <div class="btn_main">
@@ -203,12 +203,12 @@
                            </div>
                            <div class="col-lg-4 col-sm-4">
                               <div class="box_main">
-                                 <h4 class="shirt_text">Grapes</h4>
-                                 <p class="price_text">Price  <span style="color: #262626;">$ 30</span></p>
-                                 <div class="tshirt_img"><img src="images/women-clothes-img.png"></div>
+                                 <h4 class="shirt_text">Carrots</h4>
+                                 <p class="price_text">Price  <span style="color: #262626;">3000shs</span></p>
+                                 <div class="tshirt_img"><img src="12.jpg"></div>
                                  <div class="btn_main">
-                                    <div class="buy_bt"><a href="#">Buy Now</a></div>
-                                    <div class="seemore_bt"><a href="#">See More</a></div>
+                                    <div class="buy_bt"><a href="https://wa.me/c/256759134270">Buy Now</a></div>
+                                    <div class="seemore_bt"><a href="https://wa.me/c/256759134270">See More</a></div>
                                  </div>
                               </div>
                            </div>
