--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>NAKASERO FRESH FRUITS AND VEGETABLES</title>
+      <title>nakaserofriuts</title>
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="author" content="">
