--- a/index.html
+++ b/index.html
@@ -136,39 +136,38 @@
                      <div class="carousel-item active">
                         <div class="row">
                            <div class="col-sm-12">
-                              <h1 class="banner_taital">Get Start <br>NAKASERO FRESH FRUITS AND VEGETABLES</h1>
-                              <div class="buynow_bt"><a href="https://wa.me/c/256759134270">Buy Now</a></div>
+                              <h1 class="banner_taital">Get Start <br>Your favriot shoping</h1>
+                              <div class="buynow_bt"><a href="#">Buy Now</a></div>
                            </div>
                         </div>
                      </div>
                      <div class="carousel-item">
                         <div class="row">
                            <div class="col-sm-12">
-                              <h1 class="banner_taital">NAKASERO FRESH FRUITS AND VEGETABLES</h1>
-                              <div class="buynow_bt"><a href="https://wa.me/c/256759134270">Buy Now</a></div>
+                              <h1 class="banner_taital">Get Start <br>Your favriot shoping</h1>
+                              <div class="buynow_bt"><a href="#">Buy Now</a></div>
                            </div>
                         </div>
                      </div>
                      <div class="carousel-item">
                         <div class="row">
                            <div class="col-sm-12">
-                              <h1 class="banner_taital">NAKASERO MARKET</h1>
-                              <div class="buynow_bt"><a href="https://wa.me/c/256759134270">Buy Now</a></div>
+                              <h1 class="banner_taital">Get Start <br>Your favriot shoping</h1>
+                              <div class="buynow_bt"><a href="#">Buy Now</a></div>
                            </div>
                         </div>
                      </div>
                   </div>
                   <a class="carousel-control-prev" href="#my_slider" role="button" data-slide="prev">
-                     <i class="fa fa-angle-left"></i>
+                  <i class="fa fa-angle-left"></i>
                   </a>
                   <a class="carousel-control-next" href="#my_slider" role="button" data-slide="next">
-                     <i class="fa fa-angle-right"></i>
+                  <i class="fa fa-angle-right"></i>
                   </a>
                </div>
             </div>
          </div>
          <!-- banner section end -->
-      </div>
       <!-- banner bg main end -->
       <!-- fashion section start -->
       <div class="fashion_section">
